header align fixes

--- a/src/index.css
+++ b/src/index.css
@@ -143,7 +143,12 @@ article h1 {
     background-color: inherit;
 	/* text-shadow: 1px 1px 2px var(--dark); */
 }
+.menu {
+	width: 20%;
+}
 .phone {
+	text-align: right;
+	width: 20%;
 	color: var(--accent-one);
     font-size: 1rem;
 	display: inline-block;
